--- a/output/tags.html
+++ b/output/tags.html
@@ -75,7 +75,7 @@
         <h2 id="python-firsts-ref" class="tag-title">python firsts</h2>
         <ul class="articles-in-tag">
  
-            <li><a href="http://coderhook.github.io/Lets see how the gender gap affects on the studies.">Visualizing the Gender&nbsp;Gap  </a></li>
+            <li><a href="http://coderhook.github.io/Lets see how the gender gap affects on the studies.">Visualizing the Gender Gap  </a></li>
         </ul>
 
     </div>
