--- a/output/search.html
+++ b/output/search.html
@@ -12,20 +12,20 @@
 </title>
         <link href="http://cdn-images.mailchimp.com/embedcode/slim-081711.css" rel="stylesheet" type="text/css">
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
-        <link rel="stylesheet" type="text/css" href="http://coderhook.github.io/theme/css/style.css" media="screen">
-        <link rel="stylesheet" type="text/css" href="http://coderhook.github.io/theme/css/solarizedlight.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="./theme/css/style.css" media="screen">
+        <link rel="stylesheet" type="text/css" href="./theme/css/solarizedlight.css" media="screen">
 
 <link href="http://fonts.googleapis.com/css?family=Lato:300,400|Open+Sans:300,400" rel="stylesheet" type="text/css">
-<link rel="stylesheet" type="text/css" href="http://coderhook.github.io/theme/tipuesearch/tipuesearch.css">
-        <link rel="shortcut icon" href="http://coderhook.github.io/theme/images/favicon.ico" type="image/x-icon" />
-        <link rel="apple-touch-icon" href="http://coderhook.github.io/theme/images/apple-touch-icon.png" />
-        <link rel="apple-touch-icon" sizes="57x57" href="http://coderhook.github.io/theme/images/apple-touch-icon-57x57.png" />
-        <link rel="apple-touch-icon" sizes="72x72" href="http://coderhook.github.io/theme/images/apple-touch-icon-72x72.png" />
-        <link rel="apple-touch-icon" sizes="114x114" href="http://coderhook.github.io/theme/images/apple-touch-icon-114x114.png" />
-        <link rel="apple-touch-icon" sizes="144x144" href="http://coderhook.github.io/theme/images/apple-touch-icon-144x144.png" />
-        <link rel="icon" href="http://coderhook.github.io/theme/images/apple-touch-icon-144x144.png" />
-        <link href="http://coderhook.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience CoderHook - Full Atom Feed" />
-        <link href="http://coderhook.github.io/feeds/posts.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience CoderHook - posts Category Atom Feed" />
+<link rel="stylesheet" type="text/css" href="./theme/tipuesearch/tipuesearch.css">
+        <link rel="shortcut icon" href="./theme/images/favicon.ico" type="image/x-icon" />
+        <link rel="apple-touch-icon" href="./theme/images/apple-touch-icon.png" />
+        <link rel="apple-touch-icon" sizes="57x57" href="./theme/images/apple-touch-icon-57x57.png" />
+        <link rel="apple-touch-icon" sizes="72x72" href="./theme/images/apple-touch-icon-72x72.png" />
+        <link rel="apple-touch-icon" sizes="114x114" href="./theme/images/apple-touch-icon-114x114.png" />
+        <link rel="apple-touch-icon" sizes="144x144" href="./theme/images/apple-touch-icon-144x144.png" />
+        <link rel="icon" href="./theme/images/apple-touch-icon-144x144.png" />
+        <link href="/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience CoderHook - Full Atom Feed" />
+        <link href="/feeds/posts.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience CoderHook - posts Category Atom Feed" />
     </head>
     <body>
         <div id="content-sans-footer">
@@ -37,14 +37,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="http://coderhook.github.io/"><span class=site-name>Datascience CoderHook</span></a>
+                    <a class="brand" href="./"><span class=site-name>Datascience CoderHook</span></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right top-menu">
-                            <li ><a href="http://coderhook.github.io">Home</a></li>
-                            <li ><a href="http://coderhook.github.io/categories.html">Categories</a></li>
-                            <li ><a href="http://coderhook.github.io/tags.html">Tags</a></li>
-                            <li ><a href="http://coderhook.github.io/archives.html">Archives</a></li>
-                            <li><form class="navbar-search" action="http://coderhook.github.io/search.html" onsubmit="return validateForm(this.elements['q'].value);"> <input type="text" class="search-query" placeholder="Search" name="q" id="tipue_search_input"></form></li>
+                            <li ><a href=".">Home</a></li>
+                            <li ><a href="./categories.html">Categories</a></li>
+                            <li ><a href="./tags.html">Tags</a></li>
+                            <li ><a href="./archives.html">Archives</a></li>
+                            <li><form class="navbar-search" action="./search.html" onsubmit="return validateForm(this.elements['q'].value);"> <input type="text" class="search-query" placeholder="Search" name="q" id="tipue_search_input"></form></li>
                         </ul>
                     </div>
                 </div>
@@ -71,8 +71,8 @@
     </ul>
 </div>
 </footer><script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-<script type="text/javascript" src="http://coderhook.github.io/theme/tipuesearch/tipuesearch_set.js"></script>
-<script type="text/javascript" src="http://coderhook.github.io/theme/tipuesearch/tipuesearch.min.js"></script>
+<script type="text/javascript" src="./theme/tipuesearch/tipuesearch_set.js"></script>
+<script type="text/javascript" src="./theme/tipuesearch/tipuesearch.min.js"></script>
 <script>
 $(document).ready(function() {
      $('#tipue_search_input').tipuesearch({
