--- a/output/index.html
+++ b/output/index.html
@@ -7,18 +7,18 @@
         <meta name="author" content="Pedro Abel Diaz" />
         <meta name="copyright" content="Pedro Abel Diaz" />
 
-        <meta name="description" content="My name is Pedro Abel Diaz ― a Criminologist that realized how important is Data Science to get deeper insights. I am coderHook at Github. I design webpages and analyze data to get insights using Python and Machine Learning techniques. I work mainly with Python, but can use other programming languages such R. Criminology is my major degree but I am also interested in Finance and how the industry works. At this momment I am in the 2nd year of my Industrial management Bachelor degree. This is my personal blog." />
+        <meta name="description" content="My nombre es Pedro Abel Diaz - Estudie Criminologia aunque otra de mis grandes pasiones es la tecnologia, juntas creo que tiene el potencial necesario para alcanzar grandes metas. En este blog tratate de enmarcar el camino que voy siguiendo para juntar estas dos ramas. DataScience y Criminologia para el bien Social." />
         <meta property="og:type" content="article" />
         <meta name="twitter:card" content="summary">
 
-<meta property="og:title" content="I analyze and get insights from Data."/>
-<meta name="twitter:title" content="I analyze and get insights from Data.">
+<meta property="og:title" content="Aprendiendo DataScience para el bien Social."/>
+<meta name="twitter:title" content="Aprendiendo DataScience para el bien Social.">
 <meta property="og:url" content="." />
-<meta property="og:description" content="My name is Pedro Abel Diaz ― a Criminologist that realized how important is Data Science to get deeper insights. I am coderHook at Github. I design webpages and analyze data to get insights using Python and Machine Learning techniques. I work mainly with Python, but can use other programming languages such R. Criminology is my major degree but I am also interested in Finance and how the industry works. At this momment I am in the 2nd year of my Industrial management Bachelor degree. This is my personal blog." />
-<meta name="twitter:description" content="My name is Pedro Abel Diaz ― a Criminologist that realized how important is Data Science to get deeper insights. I am coderHook at Github. I design webpages and analyze data to get insights using Python and Machine Learning techniques. I work mainly with Python, but can use other programming languages such R. Criminology is my major degree but I am also interested in Finance and how the industry works. At this momment I am in the 2nd year of my Industrial management Bachelor degree. This is my personal blog.">
-<meta property="og:site_name" content="Datascience CoderHook" />
+<meta property="og:description" content="My nombre es Pedro Abel Diaz - Estudie Criminologia aunque otra de mis grandes pasiones es la tecnologia, juntas creo que tiene el potencial necesario para alcanzar grandes metas. En este blog tratate de enmarcar el camino que voy siguiendo para juntar estas dos ramas. DataScience y Criminologia para el bien Social." />
+<meta name="twitter:description" content="My nombre es Pedro Abel Diaz - Estudie Criminologia aunque otra de mis grandes pasiones es la tecnologia, juntas creo que tiene el potencial necesario para alcanzar grandes metas. En este blog tratate de enmarcar el camino que voy siguiendo para juntar estas dos ramas. DataScience y Criminologia para el bien Social.">
+<meta property="og:site_name" content="Datascience para el Bien Social" />
 <meta property="og:article:author" content="Pedro Abel Diaz" />
-        <title>Datascience CoderHook
+        <title>Datascience para el Bien Social
 </title>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
@@ -36,7 +36,7 @@
         <link rel="apple-touch-icon" sizes="120x120" href="./theme/images/apple-touch-icon-120x120.png" type="image/png" />
         <link rel="apple-touch-icon" sizes="144x144" href="./theme/images/apple-touch-icon-144x144.png" type="image/png" />
         <link rel="apple-touch-icon" sizes="152x152" href="./theme/images/apple-touch-icon-152x152.png" type="image/png" />
-        <link href="https://coderhook.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience CoderHook - Full Atom Feed" />
+        <link href="https://coderhook.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience para el Bien Social - Full Atom Feed" />
     </head>
     <body>
         <div id="content-sans-footer">
@@ -48,7 +48,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="./"><span class=site-name>Datascience CoderHook</span></a>
+                    <a class="brand" href="./"><span class=site-name>Datascience para el Bien Social</span></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right top-menu">
                             <li  class="active"><a href=".">Home</a></li>
@@ -67,7 +67,7 @@
                 <div class="span10">
 <div class="row-fluid">
     <header class="page-header span12">
-    <h1><a href=".">I analyze and get insights from Data.</a></h1>
+    <h1><a href=".">Aprendiendo DataScience para el bien Social.</a></h1>
     </header>
 
     <div class="row-fluid">
@@ -76,33 +76,45 @@
             <h1 id="about-me">About me</h1>
             </header>
             <div class="article-content">
-                <div itemscope itemtype="http://schema.org/Person"><p>My name
-        is <span itemprop="name">Pedro Abel Diaz</span>.
-       I am <a href="https://github.com/coderHook/" title="My Github
-       profile" itemprop="url"><span itemprop="nickname">coderHook</span></a> on Github. You can also reach me via <a
+                
+        <div itemscope itemtype="http://schema.org/Person">
+        <p>My nombre es <span itemprop="name">Pedro Abel Diaz</span>.
+       Soy <a href="https://github.com/coderHook/" title="My Github
+       profile" itemprop="url"><span itemprop="nickname">coderHook</span></a> en Github. Puedes contactar conmigo via email <a
        href="mailto:diazpedroabel@gmail.com" title="My email
-       address" itemprop="email">email</a>.</p><p>I work mainly with Python, but can use other programming languages
-       such R. Criminology is my major degree but I am also interested in Finance and how the industry works.
-       At this momment I am in the 2nd year of my Industrial management Bachelor degree.
+       address" itemprop="email">email</a>.</p>
 
-       <p>I plan to change my career, at this moment I am working as a sales agent in a shoe factory, and my intention is
-       to become a data scientist, my competences includes research, product design, engineering and deployment.
-       I also love to learn, I think one of the best motivation that you can get in live is when you have somehing new
-       to learn which is fantastic because there is always room for improvement.</p>
-
-       <p>I also love web development, <a href="https://www.freecodecamp.com/coderhook" title="My freecodecamp profile"
-       itemprop="url"><span itemprop="nickname">coderHook Web developer</span></a> here you can see all the codes that I programmed in Javascript,
-       jQuery, React.js, css, d3.js, node.js, express.js and most of their libraries. I do not
-       pigeonhole myself to specific languages or frameworks. A good developer
-       is receptive and has the ability to learn new technologies. I like to
-       contribute to other projects, at this moment I am contributing in a meetUP group <a href="https://www.meetup.com/es-ES/Alicante-Data-Science-Meetup/" itemprop="url">Alicante Data Science </a>.</p>
-
-       <p>Besides programming, I love sports, <a href="https://en.wikipedia.org/wiki/Ultimate_(sport)" title="Ultimate Frisbee" itemprop="url">Ultimate Frisbee</a> is my passion
-       and <a href="https://en.wikipedia.org/wiki/Slacklining" itemprop="url"> Slacklining </a> gave me a lot of concentration and
-       peace of mind, basically when you are on the cord you cannot thing in so many things at a time :)
+       <p>Estudie Criminologia aunque otra de mis grandes pasiones es la tecnologia,
+       juntas creo que tiene el potencial necesario para alcanzar grandes metas.
+       En este blog tratate de enmarcar el camino que voy siguiendo para juntar estas dos ramas. DataScience y Criminologia para el bien Social.'
+       </p>
+       <p>
+       Principalmente trabajo con Python, R y Javascript. En este momento trabajo como agente de ventas en una fabrica de calzado
+       aunque planeo cambiar mi profesion en el proximo año. Me encanta aprender cosas nuevas, creo que una de las mayores motivaciones que encuentro
+       en mi vida es cuando descubro un nuevo camino lleno de posibilidades y de nuevas maneras de hacer las cosas que quiza antes por desconocimiento no
+       era capaz de ver.
        </p>
 
-       <p>English is my second language. My mother tongue is Spanish and I always love to learn new words in exotic languages so I encourage you to teach me something.</p></div>
+       <p>
+       Por esta razon creo que aprende ciencia de datos "Data Science" es tan encearia para un criminologo, pues le capacita a este
+       para poder tomar decisiones en la sociedad que ayuden  a buen desarrollo de esta y prevenir o buscar la mejor manera de enfrentarnos
+       a nuevos retos.
+       </p>
+
+       <h4><b>Estructura del blog</b></h4>
+       <p>Al principio ire colgando ejercicios basicos, quiza alguna cosita mas compleja que haga para mostrar como se lleva a cabo un proyecto de Data Science,
+       y que asi quede mas claro las series de post que ahremos sobre limpieza de datos, Visulaizacion de los datos, donde encontrar Datasets y por ultimo tecnicas de
+       "Machine learning" que podemos utilizar para enseñar a nuestra maquina a sacar predicciones basandose en los datos que tenemos.
+       </p>
+
+       <p>
+       Espero que con este blog, alguien que quiera aprender Data Science para el bien social, encuentre la motivacion
+       necesaria para hacerlo.
+       </p>
+
+       </div>
+
+      
             </div>
         </div>
 
@@ -112,12 +124,12 @@
             </header>
             <ul class="list-all-articles">
                 <li>
-                <a href="https://github.com/coderHook/Apple-predicting-price/blob/master/apple_predictions.ipynb" title="Predicting the Stock Market Using Machine Learning">Predicting the Stock Market Using Machine Learning</a> <span class="proj-desc">Predicting the Stock market using Python and Machine learning Techniques such as, linear regression and tree forest</span>
+                <a href="https://github.com/coderHook/Apple-predicting-price/blob/master/apple_predictions.ipynb" title="Predicting the Stock Market Using Machine Learning">Predicting the Stock Market Using Machine Learning</a> <span class="proj-desc">Prediciendo los mercados usando Python Machine learning Techniques such as, linear regression and tree forest</span>
                 </li>
             </ul>
             <ul class="list-all-articles">
                 <li>
-                <a href="https://github.com/coderHook/Project--Winning-Jeopardy" title="Wining at Jeopardy using Data Analysis">Wining at Jeopardy using Data Analysis</a> <span class="proj-desc">Jeopardy is an interesting game on we can use our data science habilities toknow what question can increase our chances to win the game</span>
+                <a href="https://github.com/coderHook/Project--Winning-Jeopardy" title="Ganando al juego de Jeopardy usando Python y tecnicas de analisis de datos.">Ganando al juego de Jeopardy usando Python y tecnicas de analisis de datos.</a> <span class="proj-desc">Jeopardy is an interesting game on we can use our data science habilities toknow what question can increase our chances to win the game</span>
                 </li>
             </ul>
         </div>
@@ -130,7 +142,7 @@
             </header>
         <div class="recent-posts">
             <article>
-                <a href="./Lets see how the gender gap affects on the studies.">Visualizing the Gender Gap  </a>
+                <a href="./Lets see how the gender gap affects on the studies.">Visualizando la tendencia de hombres y mujeres a la hora de elegir&nbsp;estudios.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#data-visualization-ref">Data Visualization</a>
@@ -140,7 +152,7 @@
                 </section>
             </article>
             <article>
-                <a href="./predicting board games reviews lr">Predicting Board Games Reviews using Linear Regression.  </a>
+                <a href="./predicting board games reviews lr">Prediciendo Ratings de Juegos usando Regression&nbsp;Lineal.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#statistics-ref">Statistics</a>
@@ -150,7 +162,7 @@
                 </section>
             </article>
             <article>
-                <a href="./predicting jeopardy game questions">How to Win at Jeopardy using Python and our knowledge in statistics.  </a>
+                <a href="./predicting jeopardy game questions">Aprendiendo a ganar al juego de preguntas &#8220;Jeopardy&#8221; usando Python y Analisis de datos. (part&nbsp;1/2)  </a>
                 <section>
                     posted in
                 <a href="./categories.html#statistics-ref">Statistics</a>
@@ -160,7 +172,7 @@
                 </section>
             </article>
             <article>
-                <a href="./Using Linear Regression to see how accurate are our predictions.">Movie Review Analysis: Making predictions with the data.  </a>
+                <a href="./Using Linear Regression to see how accurate are our predictions.">Analizando las calificaciones de las peliculas: Analisis Estadistico, Visualizando resultados y obteniendo&nbsp;predicciones.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#data-analysis-ref">Data Analysis</a>
@@ -170,7 +182,7 @@
                 </section>
             </article>
             <article>
-                <a href="./Descriptive Statistics">Descriptive Statistics with Python and Pandas.  </a>
+                <a href="./Descriptive Statistics">Estadistica Descriptiva con Python y&nbsp;Pandas.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#data-visualization-ref">Data Visualization</a>
@@ -180,7 +192,7 @@
                 </section>
             </article>
             <article>
-                <a href="./proj sqlite3 and python">Creating Relations with SQL and Python  </a>
+                <a href="./proj sqlite3 and python">Creando Relaciones con <span class="caps">SQL</span> y&nbsp;Python  </a>
                 <section>
                     posted in
                 <a href="./categories.html#databases-ref">Databases</a>
@@ -190,7 +202,7 @@
                 </section>
             </article>
             <article>
-                <a href="./Lets see who and what version of star wars people tend to like more.">Star Wars survey: What version and Who likes it more.  </a>
+                <a href="./Lets see who and what version of star wars people tend to like more.">Encuestas estar wars. ¿Que versiones de la saga son mas populares y entre&nbsp;quienes?  </a>
                 <section>
                     posted in
                 <a href="./categories.html#data-cleaning-ref">Data cleaning</a>
@@ -200,7 +212,7 @@
                 </section>
             </article>
             <article>
-                <a href="./Plotting data with different plots, hist, linear and scatter plot.">First Time Using MatplotLib  </a>
+                <a href="./Plotting data with different plots, hist, linear and scatter plot.">Primeros pasos con&nbsp;matplotlib.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#data-visualization-ref">Data Visualization</a>
@@ -210,7 +222,7 @@
                 </section>
             </article>
             <article>
-                <a href="./learning seaborn">Learning Data Visualization with Seaborn and Python.  </a>
+                <a href="./learning seaborn">Aprendiendo a Visualizar datos con Seaborn y&nbsp;Python.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#data-visualization-ref">Data Visualization</a>
@@ -220,7 +232,7 @@
                 </section>
             </article>
             <article>
-                <a href="./thanksgiving insights">Thanksgiving Celebration Insights.  </a>
+                <a href="./thanksgiving insights">Explorando las tendencias que se siguen en la Celebracion de Accion de&nbsp;gracias.  </a>
                 <section>
                     posted in
                 <a href="./categories.html#python-ref">Python</a>
