--- a/output/search.html
+++ b/output/search.html
@@ -7,19 +7,19 @@
         <meta name="author" content="Pedro Abel Diaz" />
         <meta name="copyright" content="Pedro Abel Diaz" />
 
-        <meta name="description" content="Search results for Datascience CoderHook blog.
+        <meta name="description" content="Search results for Datascience para el Bien Social blog.
 " />
         <meta property="og:type" content="article" />
         <meta name="twitter:card" content="summary">
 
-<meta property="og:title" content="Search · Datascience CoderHook"/>
-<meta name="twitter:title" content="Search · Datascience CoderHook">
+<meta property="og:title" content="Search · Datascience para el Bien Social"/>
+<meta name="twitter:title" content="Search · Datascience para el Bien Social">
 <meta property="og:url" content="./search.html" />
-<meta property="og:description" content="Search results for Datascience CoderHook blog" />
-<meta name="twitter:description" content="Search results for Datascience CoderHook blog">
-<meta property="og:site_name" content="Datascience CoderHook" />
+<meta property="og:description" content="Search results for Datascience para el Bien Social blog" />
+<meta name="twitter:description" content="Search results for Datascience para el Bien Social blog">
+<meta property="og:site_name" content="Datascience para el Bien Social" />
 <meta property="og:article:author" content="Pedro Abel Diaz" />
-        <title>Search · Datascience CoderHook
+        <title>Search · Datascience para el Bien Social
 </title>
         <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.2/css/bootstrap-combined.min.css" rel="stylesheet">
         <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.1/css/font-awesome.css" rel="stylesheet">
@@ -37,7 +37,7 @@
         <link rel="apple-touch-icon" sizes="120x120" href="./theme/images/apple-touch-icon-120x120.png" type="image/png" />
         <link rel="apple-touch-icon" sizes="144x144" href="./theme/images/apple-touch-icon-144x144.png" type="image/png" />
         <link rel="apple-touch-icon" sizes="152x152" href="./theme/images/apple-touch-icon-152x152.png" type="image/png" />
-        <link href="https://coderhook.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience CoderHook - Full Atom Feed" />
+        <link href="https://coderhook.github.io/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="Datascience para el Bien Social - Full Atom Feed" />
     </head>
     <body>
         <div id="content-sans-footer">
@@ -49,7 +49,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </a>
-                    <a class="brand" href="./"><span class=site-name>Datascience CoderHook</span></a>
+                    <a class="brand" href="./"><span class=site-name>Datascience para el Bien Social</span></a>
                     <div class="nav-collapse collapse">
                         <ul class="nav pull-right top-menu">
                             <li ><a href=".">Home</a></li>
